# pi-yo_8

./: .gitignore  README.md  audio.py  audio_source.py  bat-start.bat  bot-start.sh  config.py  main.py  music.py  pyproject.toml  requirements.txt  setup.py  start.bat  start.sh  synthetic_voice.py  voice_client.py
pi_yo_8/: audio_data.py  audio_source.py  data_analysis.py  decorator.py  embeds.py  main.py  music.py  type.py  utils.py  view.py  voice_client.py
pi_yo_8/discord/: player.py
pi_yo_8/extractor/: youtube.py  youtube_api.py
pi_yo_8/extractor/yt_dlp/: __init__.py  _audio_data.py  _ie.py  _manager.py  _unit.py  audio_data.py  manager.py  unit.py
pi_yo_8/gui/: __init__.py  _embed_controller.py  _utils.py  controller.py  utils.py  view.py
pi_yo_8/lyricsgenius/: lyrics.py
pi_yo_8/music_control/: __init__.py  _music_controller.py  _playlist.py  _utils.py  controller.py  playlist.py  utils.py
pi_yo_8/pytube/: innertube.py
pi_yo_8/resources/: config_template.py
pi_yo_8/yt-dlp/: ie.py
pi_yo_8/yt_dlp/: _ie.py  audio_data.py  manager.py  status_manager.py  unit.py
test/: api.py  multiProcess.py  random.py  run_check.py  subprocess.py  test.py  thumbnails.py  yt-dlp_playlist.py
