[project]
name = "pi-yo-8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "discord>=2.3.2",
    "discord-py[voice]>=2.7.0",
    "ffmpeg>=1.4",
    "numpy>=2.4.2",
    "pytube>=15.0.0",
    "tabulate>=0.9.0",
    "yt-dlp>=2026.2.21",
]
